--- a/hello.html
+++ b/hello.html
@@ -3,12 +3,12 @@
 <html>
 
  <head>
-  <title>FBS</title>
+  <title>FBS LOKAL</title>
 
  <head>
  
  <body>
-  Hallo FBS! greetings
+  Hallo FBS! greetings to you
  </body>
 
 </html>
